[package]
name = "CorvusLauncher"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
#iced = "0.13.1"
iced = { git = "https://github.com/iced-rs/iced", rev = "0a34496"}

tap = "1.0.1"
tokio = { version = "1.47.1", features = ["fs"] }

# Error handling
anyhow = "1.0.100"

# Logging
log = "0.4.28"
env_logger = "0.11.8"
chrono = "0.4.42"
clap = { version = "4.5.45", features = ["derive"] }
etcetera = "0.10.0"
image = "0.25.8"

# generate builder methods
bon = "3.6.5"
humansize = "2.1.3"
regex = "1.11.3"
html-query-ast = "0.2.2"
html-query-extractor = "0.2.2"

[build-dependencies]
image = "0.25.8"