[package]
name = "corvus_launcher"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
debug = []

[dependencies]
iced = "0.14.0"
#iced = { git = "https://github.com/iced-rs/iced", rev = "0a34496"}

# Error handling
anyhow = "1.0.100"

# Logging
log = "0.4.28"
env_logger = "0.11.8"

chrono = "0.4.42"
clap = { version = "4.5.45", features = ["derive"] }
etcetera = "0.10.0"
image = "0.25.8"

# generate builder methods
bon = "3.6.5"

humansize = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
rfd = "0.15.4"
glob = "0.3.3"

[build-dependencies]
image = "0.25.8"